--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>http://rjsz.cloud/</title>
+    <title>瑞集数智</title>
     <style>
         body, html {
             margin: 0;
