--- a/index.html
+++ b/index.html
@@ -2,26 +2,16 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>瑞集数智</title>
+    <meta http-equiv="refresh" content="0.5;url=http://39.108.177.247/">
+    <title>跳转中...</title>
     <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            width: 100%;
-            overflow: hidden;
-        }
-        iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
+        body {font-family: Arial, sans-serif; text-align: center; padding-top: 100px;}
+        .loader {border: 5px solid #f3f3f3; border-top: 5px solid #3498db; border-radius: 50%; width: 50px; height: 50px; animation: spin 1s linear infinite; margin: 20px auto;}
+        @keyframes spin {0% {transform: rotate(0deg);} 100% {transform: rotate(360deg);}}
     </style>
 </head>
 <body>
-    <iframe src="http://39.108.177.247/" frameborder="0" allowfullscreen></iframe>
+    <h2>页面跳转中，请稍候...</h2>
+    <div class="loader"></div>
 </body>
 </html>
